2011-02-06  Christopher Stelmaszyk  <chrissitopher@gmx.de>

	* Fixed bug #12517: Replace exec_SELECTgetRows with exec_SELECTgetSingleRow whenever a single record is expected (thanks to Jo Hasenau)
	* Fixed bug #12549: Unify capitalization of language labels

2011-01-26  Christopher Stelmaszyk  <chrissitopher@gmx.de>

	* Fixed bug #12526: Manual needs new screenshots and text since we now use 2 tabs in the module (thanks to Patrick Gaumond)
	* Cleaned emconf for the release of TYPO3 4.5
	* Release linkvalidator 1.0.0

2011-01-25  Michael Miousse  <michael.miousse@infoglobe.ca>

	* Added Feature #12447: Clearly separate Checks from Report in the module (thanks to Patrick Gaumond, Philipp Gampe, Steffen Kamper and Christopher Stelmaszyk)

2011-01-21  Christopher Stelmaszyk  <chrissitopher@gmx.de>

	* Merged changes from mantis-#17176: Remove unnecessary comments and color profiles from all shipped .png / .gif files (Thanks to Steffen Gebert)

2011-01-20  Michael Miousse  <michael.miousse@infoglobe.ca>

	* Fixed bug #12432: Selected page metas are not processed
	* Fixed bug #12431: Do not put labels into members
	* Fixed bug #12429: Do not use private accessors
	* Fixed bug #12428: Adapt Variable Names to naming conventions
	* Fixed bug #12427: Rename draw*() methods to render*()
	* Fixed bug #12426: Rename classes according to naming conventions
	* Fixed bug #12425: Give modfunc1 a better name
	* Fixed bug #12424: Only use the class name for the hook
	* Fixed bug #12416: tx_linkvalidator_tasks_Validate: Missing public / protected declarations
	* Fixed bug #12226: website that has multiple domainsrecords produces funny links
	* Fixed bug #12414: OOP principle of data encapsulation violated in tx_linkvalidator_tasks_Validate
	* Fixed bug #12385: Conflict scheduler:testtask with linkvalidator::task
	* Fixed bug #12411: Fix Copyright Notices

2011-01-20  Christopher Stelmaszyk  <chrissitopher@gmx.de>
