@@ -1,3 +1,5 @@
+2011-02-15	Michael Miousse  <michael.miousse@infoglobe.ca>
+	* Fixed bug #12652:	If none of the link types are marked to be checked, all of them are checked
 2011-02-06  Christopher Stelmaszyk  <chrissitopher@gmx.de>
 
 	* Fixed bug #12517: Replace exec_SELECTgetRows with exec_SELECTgetSingleRow whenever a single record is expected (thanks to Jo Hasenau)
